--- a/peat-trending-units/src/pages/email.html
+++ b/peat-trending-units/src/pages/email.html
@@ -12,8 +12,8 @@
 	</head>
 
 	<body>
-		<!-- raw-helper -->{{#each data}}
-			<!-- /raw-helper -->
+		<!-- {{{{raw-helper}}}} -->{{#each data}}
+			<!-- {{{{/raw-helper}}}} -->
 			{{> header }}
 
 
@@ -51,8 +51,8 @@
 
 
 			{{> search }}
-			<!-- raw-helper -->
-		{{/each}}<!-- /raw-helper -->
+			<!-- {{{{raw-helper}}}} -->
+		{{/each}}<!-- {{{{/raw-helper}}}} -->
 
 		{{> vacasa-footer }}
 	</body>
