--- a/Transactionals/2-Reservation_Reminder/src/pages/email.html
+++ b/Transactionals/2-Reservation_Reminder/src/pages/email.html
@@ -1,15 +1,15 @@
 <heml>
 
 	<head>
-		<preview>We're counting down the days/preview>
-			<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700&display=swap" rel="stylesheet">
+		<preview>We're counting down the days</preview>
+		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700&display=swap" rel="stylesheet">
 
-			<!-- inject-style src="src/CSS/base.css" -->
-			<!-- inject-style src="src/CSS/typography.css" -->
-			<!-- inject-style src="src/CSS/header-white.css" -->
-			<!-- inject-style src="src/CSS/buttons.css" -->
-			<!-- inject-style src="src/CSS/reservation.css" -->
-			<!-- inject-style src="src/CSS/vacasa-transactional-footer.css" -->
+		<!-- inject-style src="src/CSS/base.css" -->
+		<!-- inject-style src="src/CSS/typography.css" -->
+		<!-- inject-style src="src/CSS/header-white.css" -->
+		<!-- inject-style src="src/CSS/buttons.css" -->
+		<!-- inject-style src="src/CSS/reservation.css" -->
+		<!-- inject-style src="src/CSS/vacasa-transactional-footer.css" -->
 	</head>
 
 	<body>
